--- a/catalog.html
+++ b/catalog.html
@@ -25,7 +25,7 @@
       </div>
       <div class="bottom_header">
         <div class="container">
-          <div class="user_block">
+          <div class="user_block clearfix">
             <div class="info">
               <p>
                 Интернет-магазин
@@ -80,171 +80,183 @@
         </div>
       </div>
     </header>
-    <main class="container">
-      <div class="breadcrumbs">
-        <ul>
-          <li>
-            <a href="#"><img src="img/brcr_home.png" width="15" height="12"></a>
-          </li>
-          <li>
-            <a href="#">КАТАЛОГ</a>
-          </li>
-          <li>
-            <a href="#">ИНСТРУМЕНТ</a>
-          </li>
-          <li>
-            <a href="#">ПЕРФОРАТОРЫ</a>
-          </li>
-        </ul>
-      </div>
-      <div class="catalog_title">
-        <h1>ПЕРФОРАТОРЫ</h1>
-      </div>
-      <div class="aside_catalog">
-        <form class="aside_catalog_form" action="index.html" method="post">
-          <span class="aside_catalog_name">ФИЛЬТР</span>
-          <h3>ЦЕНА:</h3>
-          <div class="aside_catalog_slider">
-
-          </div>
-          <h3>ПРОИЗВОДИТЕЛИ:</h3>
-          <input type="checkbox" name="manufacter" value="BOSCH" id="BOSCH" checked>
-          <label for="BOSCH">BOSCH</label>
-          <input type="checkbox" name="manufacter" value="ИНТЕРСКОЛ" id="INTERSCOL">
-          <label for="INTERSCOL">ИНТЕРСКОЛ</label>
-          <input type="checkbox" name="manufacter" value="MAKITA" id="MAKITA" checked>
-          <label for="MAKITA">MAKITA</label>
-          <input type="checkbox" name="manufacter" value="DEWALT" id="DEWALT">
-          <label for="DEWALT">DEWALT</label>
-          <input type="checkbox" name="manufacter" value="HITACHI" id="HITACHI">
-          <label for="HITACHI">HITACHI</label>
-          <h3>ПИТАНИЕ</h3>
-          <input type="radio" name="supply" value="accumulator" id="accumulator" checked>
-          <label for="accumulator">АККУМУЛЯТОРНЫЕ</label>
-          <input type="radio" name="supply" value="network" id="network">
-          <label for="accumulator">СЕТЕВЫЕ</label>
-          <input type="submit" value="ПОКАЗАТЬ">
-        </form>
-        <div class="aside_catalog_main">
-          <span class="aside_catalog_name">СОРТИРОВКА</span>
+    <main>
+      <div class="container">
+        <div class="breadcrumbs">
           <ul>
             <li>
-              <a class="sort_type_btn" href="#">ПО ЦЕНЕ</a>
+              <a href="#"><img src="img/brcr_home.png" width="15" height="12"></a>
             </li>
             <li>
-              <a class="sort_type_btn" href="#">ПО ТИПУ</a>
+              <a href="#">КАТАЛОГ</a>
             </li>
             <li>
-              <a class="sort_type_btn" href="#">ПО ФУНКЦИОНАЛУ</a>
+              <a href="#">ИНСТРУМЕНТ</a>
+            </li>
+            <li>
+              <a href="#">ПЕРФОРАТОРЫ</a>
             </li>
           </ul>
-          <ul class="sort_arrows">
-            <li>
-              <a href="#"><img src="img/icon-up-dir.png" width="11" height="10"></a>
-            </li>
-            <li>
-              <a href="#"><img src="img/icon-down-dir.png" width="11" height="10"></a>
-            </li>
-          </ul>
-          <article class="products_item">
-            <a href="#">
-              <img src="img/BOSCH-BFG-3000.jpg" width="180" height="160" alt="" />
-              <h1>Перфоратор BOSCH BFG 3000</h1>
-              <span class="products_price">15500 Р</span>
-              <span class="products_old_price">22500 Р</span>
-            </a>
-          </article>
-          <article class="products_item">
-            <a href="#">
-              <img src="img/BOSCH-BFG-6000.jpg" width="180" height="160" alt="" />
-              <h1>Перфоратор BOSCH BFG 6000</h1>
-              <span class="products_price">25500 Р</span>
-              <span class="products_old_price">30500 Р</span>
-            </a>
-          </article>
-          <article class="products_item">
-            <a href="#">
-              <div class="buy_options">
+        </div>
+        <div class="catalog_title">
+          <h1>ПЕРФОРАТОРЫ</h1>
+        </div>
+        <div class="aside_catalog clearfix">
+          <form class="aside_catalog_form" action="index.html" method="post">
+            <span class="aside_catalog_name">ФИЛЬТР</span>
+            <h3>ЦЕНА:</h3>
+            <div class="aside_catalog_slider">
+
+            </div>
+            <h3>ПРОИЗВОДИТЕЛИ:</h3>
+            <input type="checkbox" name="manufacter" value="BOSCH" id="BOSCH" checked>
+            <label for="BOSCH">BOSCH</label>
+            <input type="checkbox" name="manufacter" value="ИНТЕРСКОЛ" id="INTERSCOL">
+            <label for="INTERSCOL">ИНТЕРСКОЛ</label>
+            <input type="checkbox" name="manufacter" value="MAKITA" id="MAKITA" checked>
+            <label for="MAKITA">MAKITA</label>
+            <input type="checkbox" name="manufacter" value="DEWALT" id="DEWALT">
+            <label for="DEWALT">DEWALT</label>
+            <input type="checkbox" name="manufacter" value="HITACHI" id="HITACHI">
+            <label for="HITACHI">HITACHI</label>
+            <h3>ПИТАНИЕ</h3>
+            <input type="radio" name="supply" value="accumulator" id="accumulator" checked>
+            <label for="accumulator">АККУМУЛЯТОРНЫЕ</label>
+            <input type="radio" name="supply" value="network" id="network">
+            <label for="accumulator">СЕТЕВЫЕ</label>
+            <input type="submit" value="ПОКАЗАТЬ">
+          </form>
+          <div class="aside_catalog_main">
+            <div class="catalog_sort">
+              <span class="aside_catalog_name">СОРТИРОВКА</span>
+              <div class="sort_type">
                 <ul>
                   <li>
-                    <a class="buy_btn" href="#">КУПИТЬ</a>
+                    <a class="sort_type_btn" href="#">ПО ЦЕНЕ</a>
                   </li>
                   <li>
-                    <a class="bookmark_btn" href="#">В ЗАКЛАДКИ</a>
+                    <a class="sort_type_btn" href="#">ПО ТИПУ</a>
+                  </li>
+                  <li>
+                    <a class="sort_type_btn" href="#">ПО ФУНКЦИОНАЛУ</a>
+                  </li>
+                </ul>
+                <ul class="sort_arrows">
+                  <li>
+                    <a href="#"><img src="img/icon-up-dir.png" width="11" height="10"></a>
+                  </li>
+                  <li>
+                    <a href="#"><img src="img/icon-down-dir.png" width="11" height="10"></a>
                   </li>
                 </ul>
               </div>
-              <img src="img/BOSCH-BFG-2000.jpg" width="180" height="160" alt="" />
-              <h1>Перфоратор BOSCH BFG 2000</h1>
-              <span class="products_price">12500 Р</span>
-            </a>
-          </article>
-          <article class="products_item">
-            <a href="#">
-              <img src="img/BOSCH-BFG-3000.jpg" width="180" height="160" alt="" />
-              <h1>Перфоратор BOSCH BFG 3000</h1>
-              <span class="products_price">15500 Р</span>
-              <span class="products_old_price">22500 Р</span>
-            </a>
-          </article>
-          <article class="products_item">
-            <a href="#">
-              <img src="img/BOSCH-BFG-6000.jpg" width="180" height="160" alt="" />
-              <h1>Перфоратор BOSCH BFG 6000</h1>
-              <span class="products_price">25500 Р</span>
-              <span class="products_old_price">30500 Р</span>
-            </a>
-          </article>
-          <article class="products_item">
-            <a href="#">
-              <img src="img/BOSCH-BFG-2000.jpg" width="180" height="160" alt="" />
-              <h1>Перфоратор BOSCH BFG 2000</h1>
-              <span class="products_price">12500 Р</span>
-            </a>
-          </article>
-          <article class="products_item">
-            <a href="#">
-              <img src="img/BOSCH-BFG-3000.jpg" width="180" height="160" alt="" />
-              <h1>Перфоратор BOSCH BFG 3000</h1>
-              <span class="products_price">15500 Р</span>
-              <span class="products_old_price">22500 Р</span>
-            </a>
-          </article>
-          <article class="products_item">
-            <a href="#">
-              <img src="img/BOSCH-BFG-6000.jpg" width="180" height="160" alt="" />
-              <h1>Перфоратор BOSCH BFG 6000</h1>
-              <span class="products_price">25500 Р</span>
-              <span class="products_old_price">30500 Р</span>
-            </a>
-          </article>
-          <article class="products_item">
-            <a href="#">
-              <img src="img/BOSCH-BFG-2000.jpg" width="180" height="160" alt="" />
-              <h1>Перфоратор BOSCH BFG 2000</h1>
-              <span class="products_price">12500 Р</span>
-            </a>
-          </article>
-          <div class="nav_btns">
-            <a class="nav_btn" href="#">1</a>
-            <a class="nav_btn" href="#">2</a>
-            <a class="nav_btn" href="#">3</a>
-            <a class="nav_btn_next" href="#">СЛЕДУЮЩАЯ</a>
+            </div>
+            <div class="products_item_list clearfix">
+              <article class="products_item">
+                <a href="#">
+                  <img src="img/BOSCH-BFG-3000.jpg" width="180" height="160" alt="" />
+                  <h1>Перфоратор BOSCH BFG 3000</h1>
+                  <span class="products_price">15500 Р</span>
+                  <span class="products_old_price">22500 Р</span>
+                </a>
+              </article>
+              <article class="products_item">
+                <a href="#">
+                  <img src="img/BOSCH-BFG-6000.jpg" width="180" height="160" alt="" />
+                  <h1>Перфоратор BOSCH BFG 6000</h1>
+                  <span class="products_price">25500 Р</span>
+                  <span class="products_old_price">30500 Р</span>
+                </a>
+              </article>
+              <article class="products_item">
+                <a href="#">
+                  <div class="buy_options">
+                    <ul>
+                      <li>
+                        <a class="buy_btn" href="#">КУПИТЬ</a>
+                      </li>
+                      <li>
+                        <a class="bookmark_btn" href="#">В ЗАКЛАДКИ</a>
+                      </li>
+                    </ul>
+                  </div>
+                  <!-- <img src="img/BOSCH-BFG-2000.jpg" width="180" height="160" alt="" /> -->
+                  <h1>Перфоратор BOSCH BFG 2000</h1>
+                  <span class="products_price">12500 Р</span>
+                </a>
+              </article>
+              <article class="products_item">
+                <a href="#">
+                  <img src="img/BOSCH-BFG-3000.jpg" width="180" height="160" alt="" />
+                  <h1>Перфоратор BOSCH BFG 3000</h1>
+                  <span class="products_price">15500 Р</span>
+                  <span class="products_old_price">22500 Р</span>
+                </a>
+              </article>
+              <article class="products_item">
+                <a href="#">
+                  <img src="img/BOSCH-BFG-6000.jpg" width="180" height="160" alt="" />
+                  <h1>Перфоратор BOSCH BFG 6000</h1>
+                  <span class="products_price">25500 Р</span>
+                  <span class="products_old_price">30500 Р</span>
+                </a>
+              </article>
+              <article class="products_item">
+                <a href="#">
+                  <img src="img/BOSCH-BFG-2000.jpg" width="180" height="160" alt="" />
+                  <h1>Перфоратор BOSCH BFG 2000</h1>
+                  <span class="products_price">12500 Р</span>
+                </a>
+              </article>
+              <article class="products_item">
+                <a href="#">
+                  <img src="img/BOSCH-BFG-3000.jpg" width="180" height="160" alt="" />
+                  <h1>Перфоратор BOSCH BFG 3000</h1>
+                  <span class="products_price">15500 Р</span>
+                  <span class="products_old_price">22500 Р</span>
+                </a>
+              </article>
+              <article class="products_item">
+                <a href="#">
+                  <img src="img/BOSCH-BFG-6000.jpg" width="180" height="160" alt="" />
+                  <h1>Перфоратор BOSCH BFG 6000</h1>
+                  <span class="products_price">25500 Р</span>
+                  <span class="products_old_price">30500 Р</span>
+                </a>
+              </article>
+              <article class="products_item">
+                <a href="#">
+                  <img src="img/BOSCH-BFG-2000.jpg" width="180" height="160" alt="" />
+                  <h1>Перфоратор BOSCH BFG 2000</h1>
+                  <span class="products_price">12500 Р</span>
+                </a>
+              </article>
+            </div>
+            <div class="nav_btns">
+              <a class="nav_btn" href="#">1</a>
+              <a class="nav_btn" href="#">2</a>
+              <a class="nav_btn" href="#">3</a>
+              <a class="nav_btn_next" href="#">СЛЕДУЮЩАЯ</a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="main_block">
-        <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
-        <p>
-          Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
-          Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
-          В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
-        </p>
+      <div class="few_words">
+        <div class="container">
+          <div class="main_block">
+            <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
+            <p>
+              Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
+              Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.
+              В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
+            </p>
+          </div>
+        </div>
       </div>
     </main>
     <footer>
         <div class="up_footer">
-          <div class="container">
+          <div class="container clearfix">
             <div class="about">
               <a href="#"><img src="img/logo.png" width="220" height="47" alt="Техномарт"></a>
               <p>
@@ -290,7 +302,7 @@
           </div>
         </div>
         <div class="bottom_footer">
-          <div class="container">
+          <div class="container clearfix">
             <div class="footer_copyright">
               <p>
                 © 2010–2017 Компания «Техномарт»
