--- a/catalog.html
+++ b/catalog.html
@@ -25,7 +25,7 @@
       </div>
       <div class="bottom_header">
         <div class="container">
-          <div class="user_block clearfix">
+          <div class="user_block">
             <div class="info">
               <p>
                 Интернет-магазин
@@ -34,34 +34,24 @@
               </p>
             </div>
             <div class="contacts">
-              <span class="phone">+7 (812) 555-05-55</span>
+              <div class="phone">+7 (812) 555-05-55</div>
               <span class="address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</span>
             </div>
-            <div class="login_options_logged">
-              <div class="username">
-                <a href="#">Равшан Джамшутович</a>
-                <a><img src="img/logout.png" alt="logout" width="21" height="17"></a>
-              </div>
-              <ul>
-                <li>
-                  <a href="#">Мои заказы</a>
-                </li>
-                <li>
-                  <a href="#">Личный кабинет</a>
-                </li>
-              </ul>
+            <div class="login_options">
+              <a class="login" href="#">Вход</a>
+              <a class="register" href="#">Регистрация</a>
             </div>
           </div>
           <nav class="header_nav">
             <ul>
               <li>
-                <a href="index.html">Главная</a>
+                <a>Главная</a>
               </li>
               <li>
                 <a href="#">Компания</a>
               </li>
               <li>
-                <a>Каталог</a>
+                <a href="catalog.html">Каталог</a>
               </li>
               <li>
                 <a href="#">Новости</a>
@@ -101,7 +91,7 @@
         <div class="catalog_title">
           <h1>ПЕРФОРАТОРЫ</h1>
         </div>
-        <div class="aside_catalog clearfix">
+        <div class="aside_catalog">
           <form class="aside_catalog_form" action="index.html" method="post">
             <span class="aside_catalog_name">ФИЛЬТР</span>
             <h3>ЦЕНА:</h3>
@@ -151,24 +141,24 @@
                 </ul>
               </div>
             </div>
-            <div class="products_item_list clearfix">
-              <article class="products_item">
+            <div class="products_item_list">
+              <article class="products_item_clg">
                 <a href="#">
                   <img src="img/BOSCH-BFG-3000.jpg" width="180" height="160" alt="" />
                   <h1>Перфоратор BOSCH BFG 3000</h1>
-                  <span class="products_price">15500 Р</span>
                   <span class="products_old_price">22500 Р</span>
+                  <span class="products_price">15500 Р</span>
                 </a>
               </article>
-              <article class="products_item">
+              <article class="products_item_clg">
                 <a href="#">
                   <img src="img/BOSCH-BFG-6000.jpg" width="180" height="160" alt="" />
                   <h1>Перфоратор BOSCH BFG 6000</h1>
-                  <span class="products_price">25500 Р</span>
                   <span class="products_old_price">30500 Р</span>
+                  <span class="products_price">25500 Р</span>
                 </a>
               </article>
-              <article class="products_item">
+              <article class="products_item_clg">
                 <a href="#">
                   <div class="buy_options">
                     <ul>
@@ -185,46 +175,46 @@
                   <span class="products_price">12500 Р</span>
                 </a>
               </article>
-              <article class="products_item">
+              <article class="products_item_clg">
                 <a href="#">
                   <img src="img/BOSCH-BFG-3000.jpg" width="180" height="160" alt="" />
                   <h1>Перфоратор BOSCH BFG 3000</h1>
-                  <span class="products_price">15500 Р</span>
                   <span class="products_old_price">22500 Р</span>
+                  <span class="products_price">15500 Р</span>
                 </a>
               </article>
-              <article class="products_item">
+              <article class="products_item_clg">
                 <a href="#">
                   <img src="img/BOSCH-BFG-6000.jpg" width="180" height="160" alt="" />
                   <h1>Перфоратор BOSCH BFG 6000</h1>
-                  <span class="products_price">25500 Р</span>
                   <span class="products_old_price">30500 Р</span>
+                  <span class="products_price">25500 Р</span>
                 </a>
               </article>
-              <article class="products_item">
+              <article class="products_item_clg">
                 <a href="#">
                   <img src="img/BOSCH-BFG-2000.jpg" width="180" height="160" alt="" />
                   <h1>Перфоратор BOSCH BFG 2000</h1>
                   <span class="products_price">12500 Р</span>
                 </a>
               </article>
-              <article class="products_item">
+              <article class="products_item_clg">
                 <a href="#">
                   <img src="img/BOSCH-BFG-3000.jpg" width="180" height="160" alt="" />
                   <h1>Перфоратор BOSCH BFG 3000</h1>
-                  <span class="products_price">15500 Р</span>
                   <span class="products_old_price">22500 Р</span>
+                  <span class="products_price">15500 Р</span>
                 </a>
               </article>
-              <article class="products_item">
+              <article class="products_item_clg">
                 <a href="#">
                   <img src="img/BOSCH-BFG-6000.jpg" width="180" height="160" alt="" />
                   <h1>Перфоратор BOSCH BFG 6000</h1>
-                  <span class="products_price">25500 Р</span>
                   <span class="products_old_price">30500 Р</span>
+                  <span class="products_price">25500 Р</span>
                 </a>
               </article>
-              <article class="products_item">
+              <article class="products_item_clg">
                 <a href="#">
                   <img src="img/BOSCH-BFG-2000.jpg" width="180" height="160" alt="" />
                   <h1>Перфоратор BOSCH BFG 2000</h1>
@@ -255,8 +245,9 @@
       </div>
     </main>
     <footer>
-        <div class="up_footer">
-          <div class="container clearfix">
+      <div class="up_footer">
+        <div class="container">
+          <div class="up_footer_flex">
             <div class="about">
               <a href="#"><img src="img/logo.png" width="220" height="47" alt="Техномарт"></a>
               <p>
@@ -264,7 +255,7 @@
                 Конюшенная, д. 19/8
               </p>
             </div>
-            <nav class="footer_nav">
+            <div class="footer_nav">
               <ul>
                 <li>
                   <a href="#">Компания</a>
@@ -273,7 +264,7 @@
                   <a href="#">Новости</a>
                 </li>
                 <li>
-                  <a href="#">Каталог</a>
+                  <a href="catalog.html">Каталог</a>
                 </li>
                 <li>
                   <a href="#">Доставка</a>
@@ -282,8 +273,8 @@
                   <a href="#">Контакты</a>
                 </li>
               </ul>
-            </nav>
-            <nav class="catalog_nav">
+            </div>
+            <div class="catalog_nav">
               <ul>
                 <li>
                   <a href="#">Материалы</a>
@@ -298,11 +289,13 @@
                   <a href="#">Спецпредложения</a>
                 </li>
               </ul>
-            </nav>
+            </div>
           </div>
         </div>
-        <div class="bottom_footer">
-          <div class="container clearfix">
+      </div>
+      <div class="bottom_footer">
+        <div class="container">
+          <div class="bottom_footer_flex">
             <div class="footer_copyright">
               <p>
                 © 2010–2017 Компания «Техномарт»
@@ -326,6 +319,7 @@
             </div>
           </div>
         </div>
+      </div>
     </footer>
   </body>
 </html>
