--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="bottom_header">
         <div class="container">
-          <div class="user_block clearfix">
+          <div class="user_block">
             <div class="info">
               <p>
                 Интернет-магазин
@@ -72,7 +72,7 @@
     </header>
     <main>
       <div class="container">
-        <section class="catalog clearfix">
+        <section class="catalog">
           <div class="catalog_item materials">
             <h2>Материалы</h2>
             <a class="item_btn" href="#">НА ЛЮБОЙ ВКУС</a>
@@ -101,12 +101,12 @@
             <a class="item_btn" href="#">БЕСПЛАТНО</a>
           </div>
         </section>
-        <section class="title clearfix">
+        <section class="title">
           <h2>ПОПУЛЯРНЫЕ ТОВАРЫ</h2>
           <a class="main_btn" href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
         </section>
         <section class="products">
-          <div class="popular clearfix">
+          <div class="popular">
             <article class="products_item">
               <a href="#">
                 <img src="img/BOSCH-BFG-9000.jpg" width="180" height="160" alt="" />
@@ -145,7 +145,7 @@
           <a class="main_btn" href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
         </section>
         <section class="manufacters">
-          <div class="popular clearfix">
+          <div class="popular">
             <a class="manufacters_item" href="#">
               <img src="img/bosch.jpg" alt="" width="218" height="143"/>
             </a>
@@ -228,38 +228,40 @@
       </section>
       <div class="container">
         <section class="company">
-          <div class="main_block clearfix">
-            <div class="company_about">
-              <h2>КОМПАНИЯ "ТЕХНОМАРТ"</h2>
-              <p>
-                Настоящий мужской шоппинг начинается здесь!
-                Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.
-              </p>
-              <p>
-                Мы можем доставить ваш товар в самые отдаленные точки России!
-                Техномарт работает со многими транспортными компаниями:
-              </p>
-              <ul class="trans_companies">
-                <li>
-                  Деловые линии
-                </li>
-                <li>
-                  Автотрейдинг
-                </li>
-                <li>
-                  ЖелДорЭкспедиция
-                </li>
-              </ul>
-              <a class="main_btn" href="#">Подробнее о компании</a>
-            </div>
-            <div class="company_contacts">
-              <h2>КОНТАКТЫ</h2>
-              <p>
-                Вы можете забрать товар сами,
-                заехав в наш офис:
-              </p>
-              <a href="#"><img src="img/map.jpg" alt="Карта" width="300" height="158"></a>
-              <a class="main_btn" href="#">Заблудились? Напишите нам!</a>
+          <div class="main_block">
+            <div class="company_flex">
+              <div class="company_about">
+                <h2>КОМПАНИЯ "ТЕХНОМАРТ"</h2>
+                <p>
+                  Настоящий мужской шоппинг начинается здесь!
+                  Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.
+                </p>
+                <p>
+                  Мы можем доставить ваш товар в самые отдаленные точки России!
+                  Техномарт работает со многими транспортными компаниями:
+                </p>
+                <ul class="trans_companies">
+                  <li>
+                    Деловые линии
+                  </li>
+                  <li>
+                    Автотрейдинг
+                  </li>
+                  <li>
+                    ЖелДорЭкспедиция
+                  </li>
+                </ul>
+                <a class="main_btn" href="#">Подробнее о компании</a>
+              </div>
+              <div class="company_contacts">
+                <h2>КОНТАКТЫ</h2>
+                <p>
+                  Вы можете забрать товар сами,
+                  заехав в наш офис:
+                </p>
+                <a href="#"><img src="img/map.jpg" alt="Карта" width="300" height="158"></a>
+                <a class="main_btn" href="#">Заблудились? Напишите нам!</a>
+              </div>
             </div>
           </div>
         </section>
@@ -267,73 +269,77 @@
     </main>
     <footer>
       <div class="up_footer">
-        <div class="container clearfix">
-          <div class="about">
-            <a href="#"><img src="img/logo.png" width="220" height="47" alt="Техномарт"></a>
-            <p>
-              г. Санкт-Петербург, ул. Б.
-              Конюшенная, д. 19/8
-            </p>
-          </div>
-          <div class="footer_nav">
-            <ul>
-              <li>
-                <a href="#">Компания</a>
-              </li>
-              <li>
-                <a href="#">Новости</a>
-              </li>
-              <li>
-                <a href="catalog.html">Каталог</a>
-              </li>
-              <li>
-                <a href="#">Доставка</a>
-              </li>
-              <li>
-                <a href="#">Контакты</a>
-              </li>
-            </ul>
-          </div>
-          <div class="catalog_nav">
-            <ul>
-              <li>
-                <a href="#">Материалы</a>
-              </li>
-              <li>
-                <a href="#">Техника</a>
-              </li>
-              <li>
-                <a href="#">Инструмент</a>
-              </li>
-              <li>
-                <a href="#">Спецпредложения</a>
-              </li>
-            </ul>
+        <div class="container">
+          <div class="up_footer_flex">
+            <div class="about">
+              <a href="#"><img src="img/logo.png" width="220" height="47" alt="Техномарт"></a>
+              <p>
+                г. Санкт-Петербург, ул. Б.
+                Конюшенная, д. 19/8
+              </p>
+            </div>
+            <div class="footer_nav">
+              <ul>
+                <li>
+                  <a href="#">Компания</a>
+                </li>
+                <li>
+                  <a href="#">Новости</a>
+                </li>
+                <li>
+                  <a href="catalog.html">Каталог</a>
+                </li>
+                <li>
+                  <a href="#">Доставка</a>
+                </li>
+                <li>
+                  <a href="#">Контакты</a>
+                </li>
+              </ul>
+            </div>
+            <div class="catalog_nav">
+              <ul>
+                <li>
+                  <a href="#">Материалы</a>
+                </li>
+                <li>
+                  <a href="#">Техника</a>
+                </li>
+                <li>
+                  <a href="#">Инструмент</a>
+                </li>
+                <li>
+                  <a href="#">Спецпредложения</a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
       <div class="bottom_footer">
-        <div class="container clearfix">
-          <div class="footer_copyright">
-            <p>
-              © 2010–2017 Компания «Техномарт»
-              Все права защищены
-            </p>
-          </div>
-          <div class="footer_social">
-            <a class="social_btn social_btn_vk" href="#">Вконтакте</a>
-            <a class="social_btn social_btn_fb" href="#">Фейсбук</a>
-            <a class="social_btn social_btn_inst" href="#">Инстаграм</a>
-          </div>
-          <div class="footer_contacts">
-            <p>
-              Обратная связь:
-              <a href="#">mail@htmlacademy.ru</a>
-            </p>
-            <p>
-              Разработано —
-              <a href="#">htmlacademy.ru</a>
-            </p>
+        <div class="container">
+          <div class="bottom_footer_flex">
+            <div class="footer_copyright">
+              <p>
+                © 2010–2017 Компания «Техномарт»
+                Все права защищены
+              </p>
+            </div>
+            <div class="footer_social">
+              <a class="social_btn social_btn_vk" href="#">Вконтакте</a>
+              <a class="social_btn social_btn_fb" href="#">Фейсбук</a>
+              <a class="social_btn social_btn_inst" href="#">Инстаграм</a>
+            </div>
+            <div class="footer_contacts">
+              <p>
+                Обратная связь:
+                <a href="#">mail@htmlacademy.ru</a>
+              </p>
+              <p>
+                Разработано —
+                <a href="#">htmlacademy.ru</a>
+              </p>
+            </div>
           </div>
         </div>
       </div>
